updates to the h1 tag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title> My Second Website</title>
   </head>
   <body>
-    <h1>My Second Website stored on Github</h1>
+    <h1>My Second Website Assignment</h1>
     <p>This is my second website and this was creat at githum.com</p>
   </body>
 </html>
