updates to the p tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1>My Second Website Assignment</h1>
-    <p>This is my second website and this was creat at githum.com</p>
+    <p>This is my second website and this was creat at github.com</p>
   </body>
 </html>
